feature #82 : Better dialog for delete file confirmation